Update New world map.html

--- a/New world map.html
+++ b/New world map.html
@@ -8,12 +8,15 @@
     <title>Maps</title>
 </head>
 <body>
-    <nav class="navbar">
-     <li><a href="new world aeternum.html">New world aeternum</a></li>
-        <li><a href="New World build.html">New World class Builds</a></li>
-        <li><a href="New world gear.html">Gear</a></li>
-        <li><a href="New world dungeons and Raid.html">dungeons and raid locations</a></li>
-    </nav>
+    <nav>
+            <ul>
+              <li><a href="new world aeternum.html">Home</a></li>
+              <li><a href="New World build.html">New World class Builds</a></li>
+              <li><a href="New world map.html">map</a></li>
+              <li><a href="New world gear.html">Gear</a></li>
+              <li><a href="New world dungeons and Raid.html">dungeons and raid locations</a></li>
+            </ul>
+            </nav>
       <H1>Map</H1>
     <img src="https://th.bing.com/th/id/OIP.hqP8VSH-LN5o-WhwVeS8jQAAAA?rs=1&pid=ImgDetMain" alt="Map">
 
