--- a/New world Occultist.html
+++ b/New world Occultist.html
@@ -11,7 +11,7 @@
      
     <nav>
         <ul>
-          <li><a href="new world aeternum.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="New World build.html">New World class Builds</a></li>
           <li><a href="New world map.html">map</a></li>
           <li><a href="New world gear.html">Gear</a></li>
