Update New world gear.html

--- a/New world gear.html
+++ b/New world gear.html
@@ -12,7 +12,7 @@
     <header>
     <nav>
       <ul>
-        <li><a href="new world aeternum.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="New World build.html">New World class Builds</a></li>
         <li><a href="New world map.html">map</a></li>
         <li><a href="New world gear.html">Gear</a></li>
