--- a/index.html
+++ b/index.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
-    <head>
-        <title>new world aeternum</title>
-        <link rel="stylesheet" href="new world.css"/>
-        <link rel="stylesheet" href="new world2.css"/>
-        <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <img src="https://www.gamewallpapers.com/img_script/wallpaper_dir/img.php?src=wallpaper_new_world_02_2560x1440.jpg&height=450&width=800&fill-to-fit&sharpen" alt="new world">
-    </head>
-<header>
-    <body>
-         <main>
-        <h1>New World aeternum </h1>
-        <nav>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="New World build.html">New World class Builds</a></li>
-              <li><a href="New world map.html">map</a></li>
-              <li><a href="New world gear.html">Gear</a></li>
-              <li><a href="New world dungeons and Raid.html">dungeons and raid locations</a></li>
-            </ul>
-            </nav>
-         </header>
-         <h1>youtube</h1> 
-         <a href="https://youtube.com/playlist?list=PLDjTwDrm9VrS2wXrGxRBjG4z4oQu3-U1n&si=7p2ibqdzAGIFJHjm">New World Aeternum - Let's Play</a>
-
-        </nav>
-        <p&copy;>@New world 2025</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Notepad</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Notepad</h1>
+        <textarea id="note" placeholder="Start typing..."></textarea>
+        <div class="buttons">
+            <button id="saveBtn">Save</button>
+            <button id="clearBtn">Clear</button>
+            <button id="downloadBtn">Download</button>
         </div>
-    </body>
+    </div>
+    <script src="code.js"></script>
+</body>
 </html>
-
